--- a/style.css
+++ b/style.css
@@ -7,5 +7,18 @@ img{
     font-size: 35px;
     text-align: left;
     color: orange
-    
+}
+#soccerBase {
+    width: 30%;
+}
+#soccerFieldSetUp {
+    width: 50%;
+}
+#linkToSoccer{
+    text-decoration: none;
+    font-size: 20px;
+    color: black
+}
+#linkToSoccer:hover {
+color: blue;
 }
