--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ color: blue;
 #linkToTennis:hover {
 color: blue;
 }
+#linkTotest {
+  text-decoration: none;
+    font-size: 20px;
+    color: black
+}
+#linkToTest:hover {
+  color:blue;
+}
