--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ color: blue;
 #linkToTennis:hover {
 color: blue;
 }
-#linkTotest {
+#linkToTest {
   text-decoration: none;
   font-size: 20px;
   color: black
