--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ color: blue;
 #linkToTennis:hover {
 color: blue;
 }
+#backToHome{
+    text-decoration: none;
+    font-size: 35px;
+    text-align: left;
+    color: orange
+}
 #linkToTest {
   text-decoration: none;
   font-size: 20px;
