--- a/test.css
+++ b/test.css
@@ -10,8 +10,9 @@
   --hue-wrong: 0;
   --hue-correct: 145;
 }
+
 body {
-  --hue: var(--hue--neutral);
+  --hue: var(--hue-neutral);
   padding: 0;
   margin: 0;
   display: flex;
@@ -29,4 +30,58 @@ body.correct {
 
 body.wrong {
   --hue: var(var(--hue-wrong));
+}
+
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 0 10px 2px;
+}
+
+.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin: 20px 0;
+
+}
+#backToHome:hover {
+  border-color: black;
+}
+.btn {
+  --hue:var(--hue-neutral);
+  border: 1px solid hsl(var(--hue), 100%, 30%);
+  background-color: hsl(var(--hue), 100%, 50%);
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: white;
+  outline: none;
+}
+
+.btn:hover {
+  border-color: black;
+}
+
+.btn.correct {
+  --hue: var(--hue-correct);
+  color: black;
+}
+
+.btn.wrong {
+  --hue: var(--wrong);
+}
+
+.start-btn, .next-btn {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px 20px;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
