--- a/style.css
+++ b/style.css
@@ -30,7 +30,13 @@ color: blue;
 #Video{
     text-decoration: none;
     font-size: 20px;
-    color: black 
+    color: blue 
+}
+
+#rulesOfTennis{
+    text-decoration: none;
+    font-size: 20px;
+    color: blue 
 }
 
 #linkToTennis:hover {
