--- a/style.css
+++ b/style.css
@@ -8,7 +8,19 @@ img{
     text-align: left;
     color: orange
 }
+#linkToHome{
+    text-decoration: none;
+    font-size: 35px;
+    text-align: left;
+    color: orange
+}
 #soccerBase {
+    width: 60%;
+}
+#tennisBase {
+    width: 60%;
+}
+#bowlingBase {
     width: 60%;
 }
 #soccerFieldSetUp {
@@ -27,6 +39,11 @@ color: blue;
     font-size: 20px;
     color: black
 }
+#linkToBowling{
+    text-decoration: none;
+    font-size: 20px;
+    color: black
+}
 #Video{
     text-decoration: none;
     font-size: 20px;
@@ -38,10 +55,18 @@ color: blue;
     font-size: 20px;
     color: blue 
 }
+#rulesOfBowling{
+    text-decoration: none;
+    font-size: 20px;
+    color: blue 
+}
 
 #linkToTennis:hover {
 color: blue;
 }
+#linkToBowling:hover {
+    color: blue;
+    }
 #backToHome{
     text-decoration: none;
     font-size: 35px;
