--- a/style.css
+++ b/style.css
@@ -20,10 +20,16 @@ img{
 #tennisBase {
     width: 60%;
 }
+#lacrosseBase {
+    width: 60%;
+}
 #bowlingBase {
     width: 60%;
 }
 #soccerFieldSetUp {
+    width: 50%;
+}
+#LField {
     width: 50%;
 }
 #linkToSoccer{
@@ -40,6 +46,11 @@ color: blue;
     color: black
 }
 #linkToBowling{
+    text-decoration: none;
+    font-size: 20px;
+    color: black
+}
+#linkToLacrosse{
     text-decoration: none;
     font-size: 20px;
     color: black
