--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ color: blue;
     font-size: 20px;
     color: blue 
 }
+#rulesOfLacrosse{
+    text-decoration: none;
+    font-size: 20px;
+    color: blue 
+}
 #rulesOfBowling{
     text-decoration: none;
     font-size: 20px;
