--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ img{
 #soccerFieldSetUp {
     width: 50%;
 }
+#DsetUp {
+    width: 50%;
+}
 #LField {
     width: 50%;
 }
@@ -70,6 +73,11 @@ color: blue;
 }
 
 #rulesOfTennis{
+    text-decoration: none;
+    font-size: 20px;
+    color: blue 
+}
+#rulesOfRollerDerby{
     text-decoration: none;
     font-size: 20px;
     color: blue 
