--- a/test.css
+++ b/test.css
@@ -35,8 +35,8 @@ body.wrong {
 .container {
   width: 800px;
   max-width: 80%;
-  height: 200px;
-  max-height: 20%;
+  height: 400px;
+  max-height: 50%;
   background-color: white;
   border-radius: 5px;
   padding: 10px;
@@ -51,16 +51,25 @@ body.wrong {
   margin: 20px 0;
 
 }
+
+#backToHome {
+    text-decoration: none;
+    font-size: 35px;
+    text-align: left;
+    color: orange;
+    
+}
 #backToHome:hover {
   border-color: black;
   
 }
+
 .btn {
   --hue:var(--hue-neutral);
-  border: 1px solid hsl(var(--hue), 100%, 30%);
+  border: 5px solid hsl(var(--hue), 100%, 30%);
   background-color: hsl(var(--hue), 100%, 50%);
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 5px 15px;
   color: white;
   outline: none;
 }
@@ -81,7 +90,7 @@ body.wrong {
 
 .start-btn, .next-btn {
   font-size: 2rem;
-  font-size: 800%;
+  font-size: 600%;
   font-weight: bold;
   padding: 10px 20px;
   align-content: center;
@@ -93,7 +102,6 @@ body.wrong {
   justify-content: center;
   align-items: center;
 }
-
 .hide {
   display: none;
 }
