added water polo page

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img{
     padding-top: 0%;
     padding-left: 50%;
     padding-right: 50;
-    
+
 }
 #header {
     text-align: center;
@@ -53,6 +53,9 @@ img{
 #soccerFieldSetUp {
     width: 50%;
 }
+#H2Osetup {
+    width: 50%;
+}
 #DsetUp {
     width: 50%;
 }
@@ -67,7 +70,24 @@ img{
 #linkToSoccer:hover {
 color: blue;
 }
+#linkToRDerby:hover {
+    color: blue;
+    }
+ #linkToLacrosse:hover {
+    color: blue;
+ }
+ #linkToBowling:hover {
+    color: blue;
+    }
+ #linkTowaterpolo:hover {
+    color: blue;
+     }
 #linkToTennis{
+    text-decoration: none;
+    font-size: 20px;
+    color: black
+}
+#linkTowaterpolo{
     text-decoration: none;
     font-size: 20px;
     color: black
@@ -93,6 +113,11 @@ color: blue;
     color: blue 
 }
 
+#rulesOfwaterpolo{
+    text-decoration: none;
+    font-size: 20px;
+    color: blue 
+}
 #rulesOfTennis{
     text-decoration: none;
     font-size: 20px;
